--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -50,7 +50,7 @@
                     android:title="Data Pengajuan" />
                 <item
                     android:id="@+id/nav_verif_akun"
-                    android:icon="@drawable/ic_list_alt_24"
+                    android:icon="@drawable/ic_verif_account"
                     android:title="Verifikasi Akun Pegawai" />
                 <item
                     android:id="@+id/nav_lokasi"
