--- a/app/src/main/res/layout/fragment_rekap_absen.xml
+++ b/app/src/main/res/layout/fragment_rekap_absen.xml
@@ -99,13 +99,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Rekap data"
-            android:textSize="18dp" />
+            android:text="Filter data sebagai :"
+            android:textSize="15sp" />
 
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:id="@+id/admin_user"/>
         </LinearLayout>
         <LinearLayout
