--- a/app/src/main/res/layout/fragment_maps_view.xml
+++ b/app/src/main/res/layout/fragment_maps_view.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin.location.maps.MapsViewFragment">
+    tools:context=".admin.location.maps.MapsActivity">
 
     <fragment
         android:layout_width="match_parent"
