--- a/app/src/main/res/layout/fragment_settings_location.xml
+++ b/app/src/main/res/layout/fragment_settings_location.xml
@@ -79,6 +79,16 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
                 app:cardCornerRadius="10dp">
+
+                <ImageButton
+                    android:id="@+id/reset"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_margin="8dp"
+                    android:layout_gravity="right"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_replay_24" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -98,7 +108,6 @@
                         android:layout_height="wrap_content"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:hint="Alamat"
-                        android:enabled="false"
                         android:textColorHint="@color/black"
                         app:boxStrokeErrorColor="@color/red"
                         app:boxStrokeColor="@color/black"
