--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="merah">#F44336</color>
     <color name="transparent">#00000000</color>
     <color name="background">#E6000000</color>
+    <color name="btn_alamat_backgroun">#FF1B776E</color>
 </resources>
