--- a/app/src/main/res/layout/fragment_maps_view.xml
+++ b/app/src/main/res/layout/fragment_maps_view.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".admin.location.maps.MapsActivity">
 
-    <fragment
+    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/my_map"
+        map:liteMode="true"
         android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
 </FrameLayout>
